--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500;600;700&family=Dancing+Script:wght@700&family=Russo+One&family=UnifrakturCook:wght@700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/molle');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500;600;700&family=Dancing+Script:wght@700&family=Montserrat:wght@500;700&family=Passion+One&family=Russo+One&family=UnifrakturCook:wght@700&family=WindSong:wght@500&display=swap');
 .date {
     border: 1px solid #e5e5e5;
     height: 2.6rem;
